src/test/run-pass/unsafe-pointer-assignability.rs
fn f(x: *int) {
    unsafe {
        assert *x == 3;
    }
}

fn main() {
    f(&3);
}



